src/objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Parent_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The immediate parent division of the entity.</description>
        <inlineHelpText>The immediate parent division of the entity.</inlineHelpText>
        <label>Parent Division</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only a Record Type = Division can be associated with this field.</errorMessage>
            <filterItems>
                <field>Customer__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Division</value>
            </filterItems>
            <filterItems>
                <field>Customer__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <infoMessage>Only a Record Type = Division can be associated with this field.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Customers (My Next Higher Division)</relationshipLabel>
        <relationshipName>Division_MyLowerLevels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Postal code</description>
        <inlineHelpText>Postal code</inlineHelpText>
        <label>Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send to Quality IT systems ?</description>
        <inlineHelpText>Send to Quality IT systems ?</inlineHelpText>
        <label>Quality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>The region based on the country</inlineHelpText>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role</description>
        <inlineHelpText>Describe the role of account whom NXP sells to</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>IDH</fullName>
                </value>
                <value>
                    <fullName>VAR</fullName>
                </value>
                <value>
                    <fullName>ODM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <description>SICCode</description>
        <inlineHelpText>SIC code from DUNS (Standard Industrial Classification (SIC) codes are four-digit numerical codes assigned by the U.S. government to business establishment to identify the primary business of the establishment).</inlineHelpText>
        <label>SIC Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0000 - No found</fullName>
                </value>
                <value>
                    <fullName>0100 - Agricultural Production-Crops</fullName>
                </value>
                <value>
                    <fullName>0200 - Agricultural Prod-Livestock &amp; Animal Specialties</fullName>
                </value>
                <value>
                    <fullName>0700 - Agricultural Services</fullName>
                </value>
                <value>
                    <fullName>0800 - Forestry</fullName>
                </value>
                <value>
                    <fullName>0900 - Fishing, Hunting and Trapping</fullName>
                </value>
                <value>
                    <fullName>1000 - Metal Mining</fullName>
                </value>
                <value>
                    <fullName>1040 - Gold and Silver Ores</fullName>
                </value>
                <value>
                    <fullName>1090 - Miscellaneous Metal Ores</fullName>
                </value>
                <value>
                    <fullName>1220 - Bituminous Coal &amp; Lignite Mining</fullName>
                </value>
                <value>
                    <fullName>1221 - Bituminous Coal &amp; Lignite Surface Mining</fullName>
                </value>
                <value>
                    <fullName>1241 - Coal mining services</fullName>
                </value>
                <value>
                    <fullName>1311 - Crude Petroleum &amp; Natural Gas</fullName>
                </value>
                <value>
                    <fullName>1381 - Drilling Oil &amp; Gas Wells</fullName>
                </value>
                <value>
                    <fullName>1382 - Oil &amp; Gas Field Exploration Services</fullName>
                </value>
                <value>
                    <fullName>1389 - Oil &amp; Gas Field Services, NEC</fullName>
                </value>
                <value>
                    <fullName>1400 - Mining &amp; Quarrying of Nonmetallic Minerals (No Fuels)</fullName>
                </value>
                <value>
                    <fullName>1520 - General Bldg Contractors - Residential Bldgs</fullName>
                </value>
                <value>
                    <fullName>1531 - Operative Builders</fullName>
                </value>
                <value>
                    <fullName>1540 - General Bldg Contractors - Nonresidential Bldgs</fullName>
                </value>
                <value>
                    <fullName>1600 - Heavy Construction Other Than Bldg Const - Contractors</fullName>
                </value>
                <value>
                    <fullName>1611 - Highway and street construction</fullName>
                </value>
                <value>
                    <fullName>1622 - Bridge, tunnel, and elevated highway construction</fullName>
                </value>
                <value>
                    <fullName>1623 - Water, Sewer, Pipeline, Comm &amp; Power Line Construction</fullName>
                </value>
                <value>
                    <fullName>1629 - Heavy construction, nec</fullName>
                </value>
                <value>
                    <fullName>1700 - Construction - Special Trade Contractors</fullName>
                </value>
                <value>
                    <fullName>1711 - Plumbing, heating, air-conditioning</fullName>
                </value>
                <value>
                    <fullName>1721 - Painting and paper hanging</fullName>
                </value>
                <value>
                    <fullName>1731 - Electrical Work</fullName>
                </value>
                <value>
                    <fullName>1742 - Plastering, drywall, and insulation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer Business Life cycle - Sales ?</description>
        <inlineHelpText>Customer Business Life cycle - Sales ?</inlineHelpText>
        <label>Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State / Province</description>
        <inlineHelpText>Customer address - state/province</inlineHelpText>
        <label>State / Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aceh</fullName>
                </value>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Andaman And Nicobar Islands</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>An Giang</fullName>
                </value>
                <value>
                    <fullName>Anhui Province</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Arunachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Assam</fullName>
                </value>
                <value>
                    <fullName>Bac Giang</fullName>
                </value>
                <value>
                    <fullName>Bac Kan</fullName>
                </value>
                <value>
                    <fullName>Bac Lieu</fullName>
                </value>
                <value>
                    <fullName>Bac Ninh</fullName>
                </value>
                <value>
                    <fullName>Baja California</fullName>
                </value>
                <value>
                    <fullName>Baja California S</fullName>
                </value>
                <value>
                    <fullName>Bali</fullName>
                </value>
                <value>
                    <fullName>Banten</fullName>
                </value>
                <value>
                    <fullName>Ba Ria Vung Tau</fullName>
                </value>
                <value>
                    <fullName>Beijing City</fullName>
                </value>
                <value>
                    <fullName>Bengkulu</fullName>
                </value>
                <value>
                    <fullName>Ben Tre</fullName>
                </value>
                <value>
                    <fullName>Bihar</fullName>
                </value>
                <value>
                    <fullName>Binh Dinh</fullName>
                </value>
                <value>
                    <fullName>Binh Duong</fullName>
                </value>
                <value>
                    <fullName>Binh Phuoc</fullName>
                </value>
                <value>
                    <fullName>Binh Thuan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Indicate if the customer is currently active</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <description>Street Line 2</description>
        <inlineHelpText>Customer address. Maximum 35 characters.</inlineHelpText>
        <label>Street Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_3__c</fullName>
        <description>Street Line 3</description>
        <inlineHelpText>Customer address. Maximum 35 characters.</inlineHelpText>
        <label>Street Line 3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Address - Street Line1</description>
        <inlineHelpText>Customer address. Maximum 35 characters.</inlineHelpText>
        <label>Street Line1</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <description>Telephone</description>
        <inlineHelpText>The telephone number provided by account team or listed on company website</inlineHelpText>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type</description>
        <inlineHelpText>The type of the customer. Default value is set to Customer.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                    <default>true</default>
                    <label>Customer</label>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Subcontractor</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Website</description>
        <inlineHelpText>The public web site of the company</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <description>ZIP</description>
        <inlineHelpText>Customer address - postal code</inlineHelpText>
        <label>ZIP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All_Divisions</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>City__c</columns>
        <columns>Consolidated_Account_Code__c</columns>
        <columns>Country__c</columns>
        <columns>GSM_Classification__c</columns>
        <columns>GSM_Classification_of_Ultimate_Parent__c</columns>
        <columns>DUNS__c</columns>
        <columns>Legal_Name__c</columns>
        <columns>Global_Enterprise__c</columns>
        <columns>Parent_Division__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer__c.Division</value>
        </filters>
        <label>All Divisions</label>
    </listViews>
    <listViews>
        <fullName>Division_Value_Mass_Update</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Legal_Name__c</columns>
        <columns>Parent_Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer__c.Location</value>
        </filters>
        <filters>
            <field>Global_Enterprise__c</field>
            <operation>equals</operation>
            <value>100000176</value>
        </filters>
        <label>Division Value Mass Update</label>
        <sharedTo>
            <group>CMD_Officers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Location</fullName>
        <columns>NAME</columns>
        <columns>Legal_Name__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>DNB_Verified__c</columns>
        <columns>DUNS__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>Street__c</columns>
        <columns>ZIP__c</columns>
        <columns>GSM_Classification__c</columns>
        <columns>Industry_Segment__c</columns>
        <columns>Role__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer__c.Location</value>
        </filters>
        <label>Location</label>
    </listViews>
    <listViews>
        <fullName>Mass_Update_Consolidated_Account_Code</fullName>
        <columns>NAME</columns>
        <columns>Consolidated_Account_Code__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Industry_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer__c.Global_Enterprise</value>
        </filters>
        <label>Mass Update Consolidated Account Code</label>
        <sharedTo>
            <group>CMD_Officers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NXP_Ultimate_Parent</fullName>
        <columns>NAME</columns>
        <columns>Legal_Name__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>DNB_Verified__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>Street__c</columns>
        <columns>ZIP__c</columns>
        <columns>GSM_Classification__c</columns>
        <columns>Industry_Segment__c</columns>
        <columns>Role__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer__c.Global_Enterprise</value>
        </filters>
        <label>NXP Ultimate Parent</label>
    </listViews>
    <listViews>
        <fullName>Name_Country_City</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Legal_Name__c</columns>
        <columns>DUNS__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Legal_Name__c</field>
            <operation>contains</operation>
            <value>Flextronics</value>
        </filters>
        <filters>
            <field>City__c</field>
            <operation>equals</operation>
            <value>Sorocoba</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <label>Name_Country_City</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>NXP Global ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <recordTypes>
        <fullName>Division</fullName>
        <active>true</active>
        <description>Record Type = Division</description>
        <label>Division</label>
    </recordTypes>
    <recordTypes>
        <fullName>Global_Enterprise</fullName>
        <active>true</active>
        <description>Record Type = NXP Ultimate Parent</description>
        <label>NXP Ultimate Parent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Location</fullName>
        <active>true</active>
        <description>Record Type = Location</description>
        <label>Location</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Category_Mandatory</fullName>
        <active>true</active>
        <description>Category is a mandatory field.</description>
        <errorConditionFormula>AND 
( 
ISBLANK(TEXT(GSM_Classification__c)), 
( RecordType.DeveloperName = &apos;Global_Enterprise&apos;) 
)</errorConditionFormula>
        <errorDisplayField>GSM_Classification__c</errorDisplayField>
        <errorMessage>Category is a mandatory field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_Mandatory</fullName>
        <active>true</active>
        <description>Country is a mandatory field.</description>
        <errorConditionFormula>ISBLANK(TEXT(Country__c))</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>Country is a mandatory field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DNB_Verified_Mandatory</fullName>
        <active>true</active>
        <description>DNB Verified is a mandatory field.</description>
        <errorConditionFormula>ISBLANK(TEXT(DNB_Verified__c ))</errorConditionFormula>
        <errorDisplayField>DNB_Verified__c</errorDisplayField>
        <errorMessage>DNB Verified is a mandatory field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>District_Mandatory_for_USA</fullName>
        <active>false</active>
        <description>A district is mandatory when country is USA.</description>
        <errorConditionFormula>AND 
( 
ISPICKVAL( Country__c ,&quot;USA&quot;),
ISBLANK(TRIM(District__c))
)</errorConditionFormula>
        <errorMessage>A district is mandatory when country is USA.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_Number_Format_Check</fullName>
        <active>true</active>
        <description>CMD Hub: Fax Number convention: +ABC 
A = country code, B = Area code, C = Number
No spaces, no dashes and no brackets are allowed.</description>
        <errorConditionFormula>IF
( 
ISBLANK (TRIM( Fax__c)),false ,
NOT( REGEX( Fax__c , &quot;[+]{1}\\d{1,20}&quot;) )
)</errorConditionFormula>
        <errorDisplayField>Fax__c</errorDisplayField>
        <errorMessage>Fax no. format incorrect. Use International standard convention.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Future_Category_Validation_Rule</fullName>
        <active>true</active>
        <description>A valid &quot;Future Category Valid From Date&quot;  has to be defined while defining a Future Category attribute.</description>
        <errorConditionFormula>OR(
AND 
( NOT(ISPICKVAL(  Future_Classification__c  ,&quot;&quot;)),Future_Classification_Valid_From__c &lt; TODAY() ),
AND 
( NOT(ISPICKVAL(  Future_Classification__c  ,&quot;&quot;)),
ISBLANK((TRIM(TEXT( Future_Classification_Valid_From__c )))))
)</errorConditionFormula>
        <errorDisplayField>Future_Classification_Valid_From__c</errorDisplayField>
        <errorMessage>A valid &quot;Future Category Valid From Date&quot;  has to be defined while defining a Future Category attribute. .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Future_Global_Enterprise_Validation_Rule</fullName>
        <active>false</active>
        <description>A valid &quot;Future Global Enterprise Valid From Date&quot;  has to be defined while defining a Future Global Enterprise attribute.</description>
        <errorConditionFormula>OR(
AND 
( NOT(ISNULL(     Future_Global_Enterprise__c  )),    Future_Global_Enterprise_Valid_From__c     &lt; TODAY() ),
AND 
( NOT(ISNULL(     Future_Global_Enterprise__c  )),
ISBLANK((TRIM(TEXT
(    Future_Global_Enterprise_Valid_From__c    )))))
)</errorConditionFormula>
        <errorDisplayField>Future_Global_Enterprise_Valid_From__c</errorDisplayField>
        <errorMessage>A valid &quot;Future Global Enterprise Valid From Date&quot;  has to be defined while defining a Future Global Enterprise attribute.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Future_Industry_Segment_Validation_Rule</fullName>
        <active>true</active>
        <description>A valid &quot;Future Industry Segment Valid From Date&quot;  has to be defined while defining a Future Industry Segment attribute.</description>
        <errorConditionFormula>OR(
AND 
( NOT(ISPICKVAL(   Future_Industry_Segment__c   ,&quot;&quot;)), Future_Industry_Segment_Valid_From__c  &lt; TODAY() ),
AND 
( NOT(ISPICKVAL(  Future_Industry_Segment__c   ,&quot;&quot;)),
ISBLANK((TRIM(TEXT(  Future_Industry_Segment_Valid_From__c  )))))
)</errorConditionFormula>
        <errorDisplayField>Future_Industry_Segment_Valid_From__c</errorDisplayField>
        <errorMessage>A valid &quot;Future Industry Segment Valid From Date&quot;  has to be defined while defining a Future Industry Segment attribute.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Future_Parent_Division_Validation_Rule</fullName>
        <active>false</active>
        <description>A valid &quot;Future Parent Division Valid From Date&quot;  has to be defined while defining a Future Parent Division attribute.</description>
        <errorConditionFormula>OR(
AND 
( NOT(ISNULL(    Future_Parent_Division__c )),   Future_Parent_Division_Valid_From__c    &lt; TODAY() ),
AND 
( NOT(ISNULL(    Future_Parent_Division__c )),
ISBLANK((TRIM(TEXT
(   Future_Parent_Division_Valid_From__c    )))))
)</errorConditionFormula>
        <errorDisplayField>Future_Parent_Division_Valid_From__c</errorDisplayField>
        <errorMessage>A valid &quot;Future Parent Division Valid From Date&quot;  has to be defined while defining a Future Parent Division attribute.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Industry_segment_mandatory_customer</fullName>
        <active>true</active>
        <description>Industry Segment is mandatoryfor Type Customer</description>
        <errorConditionFormula>AND 
( 
ISPICKVAL( Industry_Segment__c,&quot;&quot;), 
ISPICKVAL( Type__c,&quot;Customer&quot;)
)
&amp;&amp; (NOT(OR($User.ProfileId=&quot;00e20000001Nc7g&quot;,$User.ProfileId=&quot;00eD0000001oBDw&quot;)))</errorConditionFormula>
        <errorDisplayField>Industry_Segment__c</errorDisplayField>
        <errorMessage>Industry Segment is mandatory for Type = Customer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Location_n_Division_must_be_of_same_NUP</fullName>
        <active>true</active>
        <description>The GCM Location and its Parent Division must be of the same NXP Ultimate Parent.</description>
        <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Location&quot;, 
    NOT(ISBLANK( Global_Enterprise__c )),
    NOT(ISBLANK( Parent_Division__c )),
    Parent_Division__r.Global_Enterprise__c != Global_Enterprise__c 
)</errorConditionFormula>
        <errorDisplayField>Parent_Division__c</errorDisplayField>
        <errorMessage>This GCM Location and its Parent Division is not of the same NXP Ultimate Parent.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Question_Marks_in_Account_Name</fullName>
        <active>true</active>
        <description>Some foreign character may get scrambled into ? question marks</description>
        <errorConditionFormula>CONTAINS(  Account_Name__c , &apos;?&apos;)</errorConditionFormula>
        <errorDisplayField>Account_Name__c</errorDisplayField>
        <errorMessage>Question Marks is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Question_Marks_in_City</fullName>
        <active>true</active>
        <description>Some foreign character may get scrambled into ? question marks</description>
        <errorConditionFormula>CONTAINS(  City__c , &apos;?&apos;)</errorConditionFormula>
        <errorDisplayField>City__c</errorDisplayField>
        <errorMessage>Question Marks is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Question_Marks_in_Legal_Name</fullName>
        <active>true</active>
        <description>Some foreign character may get scrambled into ? question marks</description>
        <errorConditionFormula>CONTAINS( Legal_Name__c , &apos;?&apos;)</errorConditionFormula>
        <errorDisplayField>Legal_Name__c</errorDisplayField>
        <errorMessage>Question Marks is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Question_Marks_in_Street</fullName>
        <active>true</active>
        <description>Some foreign character may get scrambled into ? question marks</description>
        <errorConditionFormula>CONTAINS(   Street__c , &apos;?&apos;)</errorConditionFormula>
        <errorDisplayField>Street__c</errorDisplayField>
        <errorMessage>Question Marks is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Role_Mandatory</fullName>
        <active>true</active>
        <description>Role is a mandatory field.</description>
        <errorConditionFormula>ISBLANK(TEXT(Role__c))</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>Role is a mandatory field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_Mandatory_for_USA_Canada_Brazil</fullName>
        <active>true</active>
        <description>A state is mandatory when country is USA, Canada or Brazil.</description>
        <errorConditionFormula>OR 
( 
AND 
( 
ISPICKVAL( Country__c ,&quot;Canada&quot;),
ISBLANK(TEXT(State__c))
),
AND 
( 
ISPICKVAL( Country__c ,&quot;USA&quot;),
ISBLANK(TEXT(State__c))
),
AND 
( 
ISPICKVAL( Country__c ,&quot;Brazil&quot;), 
ISBLANK(TEXT(State__c))
)
)</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>A state is mandatory when country is USA, Canada or Brazil.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Mandatory</fullName>
        <active>true</active>
        <description>Status_Mandatory</description>
        <errorConditionFormula>ISBLANK(TEXT(Status__c))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status is a mandatory field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Telephone_Number_Format_Check</fullName>
        <active>true</active>
        <description>CMD Hub: telephone number convention: +ABC 
A = country code, B = Area code, C = Number
No spaces, no dashes and no brackets are allowed.</description>
        <errorConditionFormula>IF
( 
ISBLANK (TRIM( Telephone__c)),false ,
NOT( REGEX( Telephone__c , &quot;[+]{1}\\d{1,20}&quot;) )
)</errorConditionFormula>
        <errorDisplayField>Telephone__c</errorDisplayField>
        <errorMessage>Telephone no. format incorrect. Use International standard convention</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Mandatory</fullName>
        <active>true</active>
        <description>Type is a mandatory field.</description>
        <errorConditionFormula>ISBLANK(TEXT(Type__c))</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Type is a mandatory field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ZIP_madatory_for_certain_countries</fullName>
        <active>true</active>
        <description>ZIP is mandatory for all countries except Hong Kong, Ireland, Mauritius and United Arab Emirates.</description>
        <errorConditionFormula>AND     
(
( ISBLANK(TRIM(ZIP__c)) ),
( NOT ( ISPICKVAL( Country__c ,&quot;Ireland&quot;)  )),
( NOT ( ISPICKVAL( Country__c ,&quot;Hong Kong&quot;)  )),
( NOT ( ISPICKVAL( Country__c ,&quot;Mauritius&quot;)  )),
( NOT ( ISPICKVAL( Country__c ,&quot;United Arab Emirates&quot;)  ))
)</errorConditionFormula>
        <errorDisplayField>ZIP__c</errorDisplayField>
        <errorMessage>ZIP is mandatory for all countries except Hong Kong, Ireland, Mauritius and United Arab Emirates.</errorMessage>
    </validationRules>
</CustomObject>